Fix gap between elements in hero section

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ ul {
   flex: 1;
   display: flex;
   justify-content: space-between;
+  gap: 50px;
 }
 
 .section-one .left-section {
